shadow fix was corrupting mobile modals overflows so i removed it

--- a/src/features/events_list/components/EventsListPanel/EventsListPanel.module.css
+++ b/src/features/events_list/components/EventsListPanel/EventsListPanel.module.css
@@ -3,7 +3,6 @@
   flex-flow: column nowrap;
   overflow: hidden;
   box-shadow: var(--elevation-1);
-  z-index: 1;
   &.open {
     height: 100%;
   }
