--- a/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
+++ b/src/features/layers_panel/components/MapLayersPanel/MapLayersPanel.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   overflow: hidden;
   box-shadow: var(--elevation-1);
-  z-index: 1;
 }
 .panel {
   display: flex;
