--- a/src/views/Main/Main.module.css
+++ b/src/views/Main/Main.module.css
@@ -221,6 +221,7 @@
     grid-row: 1/7;
   }
   .layersColumn {
+    z-index: 1;
     grid-column: 1;
     grid-row: 4;
     /* allow shadow of last element to be visible */
